# sandbox-udacity-ai-agents

./: CLAUDE.md  LICENSE  README.md  config.example.yaml  main.py  pyproject.toml  requirements.txt
got_researcher/: __init__.py  __main__.py  agent.py  cli.py  config.py  models.py  prompts.py  tools.py
mlruns/0/: meta.yaml
mlruns/465881862363542514/: meta.yaml
mlruns/465881862363542514/00669e73fec24bc08d720d1f21860d49/: meta.yaml
mlruns/465881862363542514/00669e73fec24bc08d720d1f21860d49/tags/: mlflow.source.name
mlruns/465881862363542514/4563cec2ec784376a20a043994955cd3/: meta.yaml
mlruns/465881862363542514/46435e3c53334686b59106c4aea2c933/: meta.yaml
mlruns/465881862363542514/46435e3c53334686b59106c4aea2c933/metrics/: answer_relevancy  context_precision  context_recall
nb/: L2 Demo 03 Output.ipynb  L2 Demo 04 LCEL.ipynb  L2 Demo Tools - Fixed.ipynb  L2 Demo Tools.ipynb  L3 Loan Agent Starter Exercise.ipynb  L3 Starter Exercise 01 Router.ipynb  L3 Text2SQL Exercise.ipynb  L4 ChromaDB Demo.ipynb  L4 Demo 01 Calling APIs.ipynb  L4 Knowledge Base Agent Demo.ipynb  L4 Knowledge Base Agent Embeddings Demo.ipynb  L4 Knowledge Base Agent Exercise 01.ipynb  L4 LangMem Demo.ipynb  L4_starter_exercise_02_evaluation.ipynb  memory.db-shm  memory.db-wal  sales.db
nb/chromadb/: chroma.sqlite3
nb/mlruns/0/: meta.yaml
nb/mlruns/378463353128066446/: meta.yaml
nb/mlruns/378463353128066446/044742a04b40489fa1ca5f5cbc9d2028/: meta.yaml
nb/mlruns/378463353128066446/847d52750b4d4c23834a18854f7e1b81/: meta.yaml
scripts/: setup_sales_db.py
