[project]
name = "sandbox-udacity-ai-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.7"
dependencies = [
    "chromadb==1.3.5",
    "datasets>=4.4.1",
    "grandalf==0.8",
    "ipywidgets==8.1.8",
    "jupyterlab==4.4.10",
    "langchain==1.0.3",
    "langchain-chroma==1.0.0",
    "langchain-community==0.4.1",
    "langchain-huggingface==1.1.0",
    "langchain-openai==1.0.2",
    "langgraph==1.0.2",
    "langgraph-checkpoint-sqlite==3.0.0",
    "langmem>=0.0.30",
    "matplotlib==3.10.7",
    "mlflow>=3.6.0",
    "pypdf==6.4.0",
    "python-dotenv==1.2.1",
    "pyyaml==6.0.3",
    "ragas>=0.3.9",
    "scikit-learn==1.7.2",
    "scipy==1.16.3",
    "seaborn==0.13.2",
    "sentence-transformers==5.1.2",
    "tavily-python==0.7.13",
    "wikipedia==1.4.0",
]
